--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
@@ -43,7 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.1.3",
     "dinero.js": "^1.9.1",
     "form-data": "^4.0.2",
@@ -73,6 +73,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quick-pinch-zoom": "^5.1.0",
     "react-swipeable": "^7.0.2",
+    "recharts": "^2.15.3",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.7.1",
